tests/NormalTests/paczka1/small_fuzzy/14682820.err
Error in line 3: CGzwcgfozZ S672 263,3
Error in line 11: b7e5mEHHC A349 30,1
